Clean up "ant clean" targets
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@9 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/common/build.xml
+++ b/common/build.xml
@@ -49,10 +49,6 @@
     
     <!-- clean targets -->
     <target name="clean">
-        <delete>
-            <fileset dir="${build.dir}">
-                <include name="**"/>
-            </fileset>
-        </delete>
+        <delete dir="${build.dir}"/>
     </target>
 </project>
