Include log4j from correct location
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@16 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
 	   <fileset file="${common.dir}/lib/jspeex.jar"/>
 	   <fileset file="${softphone.dir}/build/lib/libmedia.intel.jnilib"/>
 	   <fileset file="${softphone.dir}/build/lib/libmedia.powerpc.jnilib"/>
-	   <fileset file="${softphone.dir}/lib/log4j-1.2.8.jar"/>
+	   <fileset file="${common.dir}/lib/log4j-1.2.8.jar"/>
 	   <fileset file="${softphone.dir}/build/lib/softphone.jar"/>
 	   <fileset file="${softphone.dir}/build/lib/softphone_native.jar"/>
 	   <fileset file="${stun.dir}/build/lib/stun.jar"/>
