Better UI for bridge monitor.
Changed an ALSA parameter for silence threshold.
It didn't seem to do anything but I'm hoping it will
prevent speaker underrun and not add latency.

Added methods to the voice manager for tuning parameters.

Added more debug messages to the voice manager to help
diagnose problems.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@37 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ bridge.dir=${top.dir}/voip
 softphone.dir=${top.dir}/softphone
 dist.dir=${top.dir}/dist
 voicelib.dir=${top.dir}/voicelib
+bridgemonitor.dir=${top.dir}/bridgemonitor
 
 # bridge settings
 bridge.hostname=localhost
