Added call performance monitoring to bridgemonitor.
Fixes to Alsa Audio driver to better recover from 
speaker underrun.

VoiceManager changes for flexible audio configuration
(new spatializers).




git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@56 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/bridgemonitor/nbproject/project.properties
+++ b/bridgemonitor/nbproject/project.properties
@@ -22,13 +22,15 @@ excludes=
 file.reference.bridge_connector.jar=../voip/build/lib/bridge_connector.jar
 file.reference.swing-layout-1.0.jar=../common/lib/swing-layout-1.0.jar
 file.reference.voicelib.jar=../voicelib/build/lib/voicelib.jar
+file.reference.voip.jar=../common/build/lib/voip.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${file.reference.bridge_connector.jar}:\
     ${file.reference.voicelib.jar}:\
-    ${file.reference.swing-layout-1.0.jar}
+    ${file.reference.swing-layout-1.0.jar}:\
+    ${file.reference.voip.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
