New property to set bridge status listeners
voicebridge.status.listeners



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@84 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/build.properties
+++ b/voip/build.properties
@@ -35,6 +35,7 @@ voicebridge.local.hostAddress=localhost
 voicebridge.server.public.address=${voicebridge.local.hostAddress}
 voicebridge.first.rtp.port=0
 voicebridge.last.rtp.port=0
+voicebridge.status.listeners=
 
 
 # File and Directory Names For Servlet Deployment
