Modified build.properties so values can be modified:
voicebridge.outside.line.prefix=9
voicebridge.sip.gateways=

New command to allow / disallow PSTN calls.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@121 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/build.properties
+++ b/voip/build.properties
@@ -36,6 +36,8 @@ voicebridge.server.public.address=${voicebridge.local.hostAddress}
 voicebridge.first.rtp.port=0
 voicebridge.last.rtp.port=0
 voicebridge.status.listeners=
+voicebridge.sip.gateways=
+voicebridge.outside.line.prefix=9
 
 
 # File and Directory Names For Servlet Deployment
