Include FreeTTS. Allow outside line prefix to be specified. FullVolumeSpatializer has an attenuator.
Set the name when migrating a call.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@126 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/common/build.xml
+++ b/common/build.xml
@@ -19,6 +19,14 @@
 	<pathelement location="${lib.dir}/JainSipApi1.2.jar"/>
 	<pathelement location="${lib.dir}/JainSipRi1.2.jar"/>
 	<pathelement location="${lib.dir}/log4j-1.2.8.jar"/>
+	<pathelement location="${lib.dir}/freetts.jar"/>
+	<pathelement location="${lib.dir}/mbrola.jar"/>
+	<pathelement location="${lib.dir}/cmudict04.jar"/>
+	<pathelement location="${lib.dir}/cmulex.jar"/>
+	<pathelement location="${lib.dir}/cmu_time_awb.jar"/>
+	<pathelement location="${lib.dir}/cmutimelex.jar"/>
+	<pathelement location="${lib.dir}/cmu_us_kal.jar"/>
+	<pathelement location="${lib.dir}/en_us.jar"/>
     </path>
     
     <target name="init">
