Incoming call handling:   - fixed problem with BridgeMonitor displaying incoming calls.   - added tts messages.
Call Migration (Transfer call)
  - Fixed problems and make it work whether there's a softphone active or not.

Voice Bridge
  - Fixed problems with call migration and private mixes.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@128 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,14 @@
 	   <fileset file="${softphone.dir}/build/lib/softphone.jar"/>
 	   <fileset file="${softphone.dir}/build/lib/softphone_native.jar"/>
 	   <fileset file="${stun.dir}/build/lib/stun.jar"/>
+	   <fileset file="${common.dir}/lib/freetts.jar"/>
+	   <fileset file="${common.dir}/lib/mbrola.jar"/>
+	   <fileset file="${common.dir}/lib/cmudict04.jar"/>
+	   <fileset file="${common.dir}/lib/cmulex.jar"/>
+	   <fileset file="${common.dir}/lib/cmu_time_awb.jar"/>
+	   <fileset file="${common.dir}/lib/cmutimelex.jar"/>
+	   <fileset file="${common.dir}/lib/cmu_us_kal.jar"/>
+	   <fileset file="${common.dir}/lib/en_us.jar"/>
 	</copy>
 
 	<copy todir="tmp/voicebridge/nist-sip">
