Change control names in ManagerUI.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@140 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/build.xml
+++ b/voip/build.xml
@@ -252,6 +252,12 @@
         </ant>
     </target>
     
+    <target name="register" depends="jar">
+        <ant antfile="run.xml" target="register">
+            <reference refid="run.classpath"/>
+        </ant>
+    </target>
+    
     <target name="run-config" depends="jar">
         <ant antfile="run.xml" target="run-config">
             <reference refid="run.classpath"/>
