Changes for a single native library for the Mac platform.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@156 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/softphone/build.properties
+++ b/softphone/build.properties
@@ -26,6 +26,5 @@ source.version=1.5
 # native libraries
 native.lib.dir=${build.lib.dir}
 alsa.native.library=${native.lib.dir}/libMediaFramework.so
-powerpc.coreaudio.native.library=${native.lib.dir}/powerpc.libMediaFramework.jnilib
-intel.coreaudio.native.library=${native.lib.dir}/intel.libMediaFramework.jnilib
+coreaudio.native.library=${native.lib.dir}/libMediaFramework.jnilib
 
