Added debug message to JitterManager.
Moved voice bridge runtime properties from build.xml to run.xml.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@187 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/build.xml
+++ b/build.xml
@@ -53,6 +53,7 @@
 	<copy todir="tmp/voicebridge">
 	   <fileset file="${bridge.dir}/build/lib/bridge_connector.jar"/>
 	   <fileset file="${bridge.dir}/build/lib/bridge.jar"/>
+	   <fileset file="${bridge.dir}/run.properties"/>
 	   <fileset file="${bridge.dir}/run.xml"/>
 	   <fileset file="${bridge.dir}/lib/codecLib_dtmf.jar"/>
 	   <fileset file="${bridge.dir}/lib/codecLibwrapper_dtmf.jar"/>
@@ -127,6 +128,7 @@
                 <include name="*.jar"/>
             </fileset>
             <fileset dir="${bridge.dir}">
+                <include name="run.properties"/>
                 <include name="run.xml"/>
             </fileset>
         </copy>
