--- a/voip/run.properties
+++ b/voip/run.properties
@@ -11,3 +11,4 @@ voicebridge.last.rtp.port=0
 voicebridge.status.listeners=
 voicebridge.sip.gateways=
 voicebridge.outside.line.prefix=9
+voicebridge.long.distance.prefix=1
