--- a/common/build.xml
+++ b/common/build.xml
@@ -51,7 +51,7 @@
 	    <fileset dir="${build.classes.dir}">
 		 <include name="**/*.*"/>
 	    </fileset>
-	    <fileset dir="src" includes="com/sun/voip/server/sounds/dtmf*.au, com/sun/voip/server/sounds/silence.100ms.au, com/sun/voip/server/sounds/comfort_noise.au"/>
+	    <fileset dir="src" includes="com/sun/voip/server/sounds/dtmf*.au, com/sun/voip/server/sounds/silence.100ms.au, com/sun/voip/server/sounds/comfort_noise.au, com/sun/voip/server/sounds/dialtojoin.au"/>
         </jar>
     </target>
     
