Define property voicebridge.sip.proxy
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@236 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/run.properties
+++ b/voip/run.properties
@@ -10,5 +10,6 @@ voicebridge.first.rtp.port=0
 voicebridge.last.rtp.port=0
 voicebridge.status.listeners=
 voicebridge.sip.gateways=
+voicebridge.sip.proxy=
 voicebridge.outside.line.prefix=9
 voicebridge.long.distance.prefix=1
