Softphone    - don't write silence packets to speaker.
   - Update alsa README

   - Changes to get the public Rtcp port.

   - Put up a dialog box when an audio problem is logged.

Bridge

   - Changes to tunnel all audio to a single receiver port for use with firewalls.

   - Fix NPE in DotAudioSource

   - Added done() method to AudioSource so MP3 player knows when the treatment is done.

   - Fix problem with using RTCP to timeout calls.

Voicelib

   - Make sure call Id's are unique.

   - Fix problem when migrating.  Private mixes weren't being reset.




git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@237 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/common/build.properties
+++ b/common/build.properties
@@ -3,5 +3,6 @@ lib.dir=lib
 build.dir=build
 build.classes.dir=${build.dir}/classes
 build.lib.dir=${build.dir}/lib
+stun.build.lib.dir=../stun/build/lib
 
 source.version=1.5
