--- a/voip/run.properties
+++ b/voip/run.properties
@@ -13,3 +13,4 @@ voicebridge.sip.gateways=
 voicebridge.sip.proxy=
 voicebridge.outside.line.prefix=9
 voicebridge.long.distance.prefix=1
+voicebridge.lone.receiver.port=0
