--- a/voip/run.properties
+++ b/voip/run.properties
@@ -6,11 +6,17 @@ voicebridge.sip.port=5060
 voicebridge.control.port=6666
 voicebridge.local.hostAddress=localhost
 voicebridge.server.public.address=${voicebridge.local.hostAddress}
+voicebridge.server.public.control.port=${voicebridge.control.port}
+voicebridge.server.public.sip.port=${voicebridge.sip.port}
 voicebridge.first.rtp.port=0
 voicebridge.last.rtp.port=0
 voicebridge.status.listeners=
 voicebridge.sip.gateways=
 voicebridge.sip.proxy=
+voicebridge.localhost.security=false
 voicebridge.outside.line.prefix=9
 voicebridge.long.distance.prefix=1
+voicebridge.status.listeners=
 voicebridge.lone.receiver.port=0
+voicebridge.sound.path=/com/sun/voip/server/sounds:.
+
