--- a/voip/run.properties
+++ b/voip/run.properties
@@ -16,6 +16,7 @@ voicebridge.sip.proxy=
 voicebridge.localhost.security=false
 voicebridge.outside.line.prefix=9
 voicebridge.long.distance.prefix=1
+voicebridge.international.prefix=011
 voicebridge.status.listeners=
 voicebridge.lone.receiver.port=0
 voicebridge.sound.path=/com/sun/voip/server/sounds:.
