More logging of errors in the softphone.
Try once again to determine the best private local address and consistently use that.

Changes to support URL's as treatments.

Use CopyOnWriteArrayList instead of ConcurrentHashMap where appropriate 
in the voice manager.

Handle a treatment as a point source rather than a rectangle.

Fleshed out RecorderImpl.

Allow port number to be specified with a VoIP Gateway IP Address.




git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@263 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/run.properties
+++ b/voip/run.properties
@@ -20,4 +20,5 @@ voicebridge.international.prefix=011
 voicebridge.status.listeners=
 voicebridge.lone.receiver.port=0
 voicebridge.sound.path=/com/sun/voip/server/sounds:.
+voicebridge.sound.cache.path=
 
