Display default audio devices on Mac.
Only select preferred audio device if it's still valid.

Add @Recorder to audio recorders.

Allow buffer size to be specified for network audio files.

Fixed voicemanager copyrights.

Made voicemanager changes to use AbstractService.

added toString() to spatializers.

voicemanager changes for warmstart.

Increased the voice bridge heap size.



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@266 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/run.properties
+++ b/voip/run.properties
@@ -21,4 +21,4 @@ voicebridge.status.listeners=
 voicebridge.lone.receiver.port=0
 voicebridge.sound.path=/com/sun/voip/server/sounds:.
 voicebridge.sound.cache.path=
-
+voicebridge.network.audio.buffer.size=
