CallParticipant:  Fix typos.
CallSetup:  Added flag for incoming call.

CallImpl:  Handle incoming call.

PlayerImpl:  Needs to be Serializable

build.xml:  Install MP3AudioSource as part of the distribution



git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@270 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/build.xml
+++ b/build.xml
@@ -116,7 +116,7 @@
             </fileset>
         </zip>
 
-<!--        <delete dir="tmp"/> -->
+	<delete dir="tmp"/>
     </target>
 
     <target name="wonderland-dist" depends="jar, dist-bridge, dist-softphone, dist-voicelib" description="Build distribution zip for Wonderland">
@@ -161,6 +161,7 @@
     <target name="dist-bridge" depends="jar-bridge"
             description="Build bridge distribution directory">
         <mkdir dir="${dist.dir}/bridge"/>
+        <mkdir dir="${dist.dir}/bridge/modules"/>
         
         <copy todir="${dist.dir}/bridge">
             <fileset dir="${common.dir}/lib">
@@ -181,6 +182,12 @@
             <fileset dir="${bridge.dir}">
                 <include name="run.properties"/>
                 <include name="run.xml"/>
+            </fileset>
+        </copy>
+
+        <copy todir="${dist.dir}/bridge/modules">
+            <fileset dir="${bridge.dir}/modules">
+                <include name="**"/>
             </fileset>
         </copy>
 
