--- a/softphone/build.properties
+++ b/softphone/build.properties
@@ -15,7 +15,8 @@ common.dir=${top.dir}/common
 common.lib.dir=${common.dir}/lib
 common.build.lib.dir=${common.dir}/build/lib
 
-alsa.dir=audioframework/alsa
+alsa.32bit.dir=audioframework/alsa32
+alsa.64bit.dir=audioframework/alsa64
 coreaudio.dir=audioframework/coreaudio
 
 javadoc.dir=${build.dir}/javadoc
@@ -25,6 +26,7 @@ source.version=1.5
 
 # native libraries
 native.lib.dir=${build.lib.dir}
-alsa.native.library=${native.lib.dir}/libMediaFramework.so
+alsa.native.32bit.library=${native.lib.dir}/libMediaFramework32.so
+alsa.native.64bit.library=${native.lib.dir}/libMediaFramework64.so
 coreaudio.native.library=${native.lib.dir}/libMediaFramework.jnilib
 
