--- a/softphone/build.xml
+++ b/softphone/build.xml
@@ -81,7 +81,10 @@
 
         <!-- copy native libraries -->
         <copy todir="${build.lib.dir}">
-            <fileset dir="${alsa.dir}">
+            <fileset dir="${alsa.32bit.dir}">
+                <include name="*.so"/>
+	    </fileset>
+            <fileset dir="${alsa.64bit.dir}">
                 <include name="*.so"/>
 	    </fileset>
             <fileset dir="${coreaudio.dir}">
@@ -168,7 +171,9 @@
         <property name="alsa.native.dir"
                   value="${classes.dir}/com/sun/mc/softphone/media/alsa/native"/>
         <mkdir dir="${alsa.native.dir}"/>
-        <copy file="${alsa.native.library}"
+        <copy file="${alsa.native.32bit.library}"
+              todir="${alsa.native.dir}"/>
+        <copy file="${alsa.native.64bit.library}"
               todir="${alsa.native.dir}"/>
     </target>
 
@@ -198,7 +203,7 @@
             </manifest>
         </jar>
         
-        <copy file="${alsa.native.library}" tofile="${build.lib.dir}/libMediaFramework.so"/>
+        <copy file="${alsa.native.32bit.library}" tofile="${build.lib.dir}/libMediaFramework32.so"/>
         <copy file="${coreaudio.native.library}" tofile="${build.lib.dir}/libMediaFramework.jnilib"/>
 
         <jar compress="true" jarfile="${build.lib.dir}/softphone_inst.jar">
