Rename alsa native libraries for each architecture.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@303 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/softphone/build.properties
+++ b/softphone/build.properties
@@ -15,8 +15,8 @@ common.dir=${top.dir}/common
 common.lib.dir=${common.dir}/lib
 common.build.lib.dir=${common.dir}/build/lib
 
-alsa.32bit.dir=audioframework/alsa32
-alsa.64bit.dir=audioframework/alsa64
+alsa.i386.dir=audioframework/alsai386
+alsa.amd64.dir=audioframework/alsaamd64
 coreaudio.dir=audioframework/coreaudio
 
 javadoc.dir=${build.dir}/javadoc
@@ -26,7 +26,7 @@ source.version=1.5
 
 # native libraries
 native.lib.dir=${build.lib.dir}
-alsa.native.32bit.library=${native.lib.dir}/libMediaFramework32.so
-alsa.native.64bit.library=${native.lib.dir}/libMediaFramework64.so
+alsa.native.i386.library=${native.lib.dir}/libMediaFrameworkI386.so
+alsa.native.amd64.library=${native.lib.dir}/libMediaFrameworkAmd64.so
 coreaudio.native.library=${native.lib.dir}/libMediaFramework.jnilib
 
