Fix problem with microphone blocking on read on Windows.
Move add and remove wall methods to Player.

Bug fixes for public voice chat.

Added treatment created listener.

Moved DEFAULT_MAXIMUM_VOLUME to spatializer.

Fixes for ambient spatializer to support Box volumes.

Get rid of lots of debug messages.

Fix problem with call status listeners being notified twice.




git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@308 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/voip/run.properties
+++ b/voip/run.properties
@@ -11,14 +11,14 @@ voicebridge.server.public.sip.port=${voicebridge.sip.port}
 voicebridge.first.rtp.port=0
 voicebridge.last.rtp.port=0
 voicebridge.status.listeners=
-voicebridge.sip.gateways=
+voicebridge.sip.gateways=129.148.75.22
 voicebridge.sip.proxy=
 voicebridge.localhost.security=false
 voicebridge.outside.line.prefix=9
 voicebridge.long.distance.prefix=1
 voicebridge.international.prefix=011
-voicebridge.status.listeners=
+voicebridge.status.listeners=129.148.75.55:6668
 voicebridge.lone.receiver.port=0
 voicebridge.sound.path=/com/sun/voip/server/sounds:.
-voicebridge.sound.cache.path=
+voicebridge.sound.cache.path=./audiocache
 voicebridge.network.audio.buffer.size=
