--- a/softphone/build.xml
+++ b/softphone/build.xml
@@ -222,6 +222,18 @@
                 <attribute name="Main-Class" value="com.sun.mc.softphone.inst.SoftphoneExtInstaller"/>
             </manifest> 
         </jar>
+
+<!--
+        <signjar alias="signSoftphone"
+                keystore="./joestore"
+                lazy="true"
+                storepass="oranges">
+            <fileset dir="build/lib">
+                <include name="softphone.jar"/>
+            </fileset>
+        </signjar>
+-->
+
     </target>
     
     <!-- == Netbeans integration == -->
