--- a/softphone/build.xml
+++ b/softphone/build.xml
@@ -223,16 +223,14 @@
             </manifest> 
         </jar>
 
-<!--
         <signjar alias="signSoftphone"
-                keystore="./joestore"
+                keystore="joestore"
                 lazy="true"
-                storepass="oranges">
+                storepass="foobar">
             <fileset dir="build/lib">
                 <include name="softphone.jar"/>
             </fileset>
         </signjar>
--->
 
     </target>
     
