--- a/voip/run.properties
+++ b/voip/run.properties
@@ -4,7 +4,7 @@
 # bridge parameters which can be overridden in my.run.properties
 voicebridge.sip.port=5060
 voicebridge.control.port=6666
-voicebridge.local.hostAddress=localhost
+voicebridge.local.hostAddress=129.148.75.55
 voicebridge.server.public.address=${voicebridge.local.hostAddress}
 voicebridge.server.public.control.port=${voicebridge.control.port}
 voicebridge.server.public.sip.port=${voicebridge.sip.port}
